fixed logout div spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,8 +71,10 @@
   /* background-color: darkslategray; */
   background-color: black;
   /* border-bottom: solid #000000; */
-  padding-top: 40px;
-  padding-bottom: 39px;
+  padding-top: 50px;
+  padding-right: 20px;
+  padding-bottom: 50px;
+  align-items: center;
 }
 
 .boxAroundNav {
@@ -86,6 +88,7 @@
   align-items: center;
   background-color: black;
   width: 100%;
+  height: 120px;
   /* justify-content: space-between; */
 }
 
@@ -144,13 +147,14 @@
   display: flex;
   justify-content: space-between;
   width: 100vw;
+  height: 120px;
 }
 
 .navItemsCont {
   display: flex;
   justify-content: space-between;
   min-width: 100vw;
-  height: 100px;
+  height: 120px;
 }
 
 .profile-dropdown {
@@ -159,8 +163,11 @@
   list-style-type: none;
   background-color: gray;
   border-radius: 5px;
-  padding: 5px;
+  /* padding: 5px; */
+  padding: 4px;
   margin-right: 10px;
+  /* margin: 0px; */
+  /* margin-right: 10px; */
 }
 
 .bottomIcons {
